<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ink_black"
    android:fillViewport="true"
    android:overScrollMode="never"
    tools:context=".ui.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/spacing_xxl">

        <!-- Top app bar with back + settings -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/profileToolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_lg"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_profile"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/alabaster_grey"
            app:titleTextColor="@color/alabaster_grey"
            android:contentDescription="@string/cd_back" />

        <!-- Avatar -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatarImage"
            android:layout_width="@dimen/profile_avatar_size"
            android:layout_height="@dimen/profile_avatar_size"
            android:layout_marginTop="@dimen/spacing_md"
            android:background="@drawable/bg_avatar_circle"
            android:contentDescription="@string/cd_profile_avatar"
            android:padding="20dp"
            android:src="@drawable/ic_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileToolbar"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
            app:tint="@color/alabaster_grey" />

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:gravity="center"
            android:text="@string/profile_username"
            android:textAppearance="@style/TextAppearance.MusicStream.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatarImage" />

        <TextView
            android:id="@+id/bioText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_lg"
            android:layout_marginTop="@dimen/spacing_xs"
            android:gravity="center"
            android:text="@string/profile_bio"
            android:textAppearance="@style/TextAppearance.MusicStream.Caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameText" />

        <!-- Favorite Genres -->
        <TextView
            android:id="@+id/genresTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_xl"
            android:text="@string/section_favorite_genres"
            android:textAppearance="@style/TextAppearance.MusicStream.SectionTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bioText" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/genresChipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_md"
            app:chipSpacingHorizontal="@dimen/spacing_sm"
            app:chipSpacingVertical="@dimen/spacing_sm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genresTitle" />

        <!-- Recently Played -->
        <TextView
            android:id="@+id/recentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_xl"
            android:text="@string/section_recently_played"
            android:textAppearance="@style/TextAppearance.MusicStream.SectionTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genresChipGroup" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recentRecycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:paddingHorizontal="@dimen/spacing_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recentTitle"
            tools:itemCount="4"
            tools:listitem="@layout/item_album" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
